src/objects/VPM_MDM_Country1__mdt.object
<CustomObject>
    <description>VPM- Stores the MDM Countries</description>
    <fields>
        <fullName>Country_Code__c</fullName>
        <description>VPM- Stores the Country Code for the Country</description>
        <label>Country Code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name__c</fullName>
        <description>VPM-  Stores the Country Name</description>
        <label>Country Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_Name_with_Code__c</fullName>
        <description>VPM-  Stores the Country Name with Code.</description>
        <label>Country Name with Code</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <label>MDM Country</label>
    <pluralLabel>MDM Country</pluralLabel>
</CustomObject>